Create the endpoint that shows the songs of a especific album